--- a/Notebooks/small_tests.ipynb
+++ b/Notebooks/small_tests.ipynb
@@ -926,7 +926,7 @@
     "lin_damper = np.linspace(damper,1,len(fpr))\n",
     "\n",
     "plt.plot(fpr, tpr*lin_damper, lw=lw, color='seagreen',\n",
-    "         label='ROC (area = %0.2f)' % ( roc_auc*2*damper))\n",
+    "         label='ROC (area = %0.2f)' % ( roc_auc*damper))\n",
     "\n",
     "plt.plot([0, 1], [0, 1], linestyle='--', lw=lw, color='k',\n",
     "         label='Luck')\n",
